syntax = "proto3";

package user;

option go_package = "/internal/sales/infra/gen";

service UserService {
  rpc GetUserByID(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
}
